# django-temporalio

./: pyproject.toml
django_temporalio/: registry.py
django_temporalio/management/commands/: start_temporalio_worker.py
