[tool.poetry]
name = "django-temporalio"
version = "0.1.0"
description = ""
authors = ["Shlok Patel <shlok.patel@fampay.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
temporalio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
